tests/ui/panics/default-backtrace-ice.stderr
error[E0425]: cannot find value `missing_ident` in this scope
  --> $DIR/default-backtrace-ice.rs:21:13
   |
LL | fn main() { missing_ident; }
   |             ^^^^^^^^^^^^^ not found in this scope


stack backtrace:
(end_short_backtrace)
(begin_short_backtrace)

error: the compiler unexpectedly panicked. this is a bug.







query stack during panic:
#0 [resolver_for_lowering] getting the resolver for lowering
end of query stack
